--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
+# Node modules
+node_modules/
+
+
+# Environment variables
 .env
 .env.local
 .env.development
 .env.test
 .env.production
+.wrangler
+# Build output
 dist/
-node_modules/
 build/
 out/
 # Logs
@@ -13,6 +19,15 @@ logs/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # OS specific
 .DS_Store
